# aranet4-mcp-server

./: .env  .env.example  .gitignore  Dockerfile  README.md  aranet.py  aranet4db.py  com.diegobit.aranet4-fetch.plist  config-example.yaml  config.yaml  fetch-job.py  main.py  pyproject.toml  server.py  smithery.yaml
src/: aranet.py  server.py
