[project]
name = "aranet4-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pillow>=11.1.0",
    "aranet4>=2.5.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "tzlocal>=5.3.1",
    "pyyaml>=6.0.2",
]
